# dave_copilot_gpt

./: .gitignore  README.md  main.py  pyproject.toml
code_assistant/: codebase_embeddings_index.py  conversational_engine.py  interface.py  main.py
